--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	},
 	"dependencies": {
 		"highlight.js": "^11.11.1",
+		"markdown-it": "^14.1.0",
 		"mermaid": "^11.6.0",
 		"socket.io-client": "^4.8.1"
 	}
